# mtap

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dut  Dockerfile.runner  Makefile  README.md  coverage_matrix.csv  docker-compose.yml  pyproject.toml  report_generator.py  requirements-dev.txt  requirements-web.txt  requirements.txt
.github/workflows/: ci.yml
analytics/: pareto.py  stratification.py  yield_analysis.py
dashboard/: app.py  utils.py
docs/: architecture.md  project_overview.md  protocol.md  requirements.md  sample_exchange_10.json
dut/: config.yaml
src/mtap/: __main__.py  config.py
src/mtap/analytics/: __init__.py  io.py  pareto.py  run_analytics.py  stratification.py  yield_analysis.py
src/mtap/cli/: main.py  run_analytics.py  run_batch.py  run_dut.py
src/mtap/common/: ids.py  time.py
src/mtap/dashboard/: app.py
src/mtap/dut/: device_model.py  fault_injection.py  protocol.py  server.py
src/mtap/reporting/: junit.py  logger.py  report_generator.py
src/mtap/resources/: __init__.py
src/mtap/runner/: client.py  plan_loader.py  plan_schema.py  runner.py
src/mtap/storage/: __init__.py  sqlite_store.py
src/mtap/traceability/: coverage.py
storage/: sqlite_store.py
templates/: report.html
test_framework/: __init__.py  client.py  logger.py  runner.py  test_plan.yaml
test_plans/: test_plan.yaml  test_plan_2.yaml
tests/: conftest.py  test_analytics_synthetic.py  test_fault_injection.py  test_imports.py  test_plan_validation.py  test_runner_smoke.py
traceability/: req_traceability.yaml
